# learn-quant-with-codex

./: .gitignore  AGENT.md  README.md  readme.md
.github/workflows/: ci.yml
docs/: bias-checklist.md  course-authoring-guide.md  course-design.md  course-outline.md  course-research.md  next-roadmap.md  requirements.md  tutorial-reference-analysis.md
python/: README.md  pyproject.toml
python/data/: sample_prices.csv
python/examples/: _example_utils.py  generate_capstone_template.py  run_buy_and_hold.py  run_capstone_check.py  run_data_quality_report.py  run_equal_weight_portfolio.py  run_metrics_summary.py  run_moving_average.py  run_parameter_scan.py  run_position_cost_bias.py  run_returns_summary.py
python/src/quant_learning/: __init__.py  backtest.py  costs.py  data.py  experiments.py  metrics.py  portfolio.py  positions.py  reports.py  strategies.py
python/tests/: test_backtest.py  test_costs.py  test_data.py  test_experiments.py  test_metrics.py  test_portfolio.py  test_positions.py  test_reports.py  test_strategies.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/(en)/: layout.js
web/app/(zh)/: layout.js  page.js
web/content/courses/: en.json  zh.json
web/scripts/: build.mjs  dev-server.mjs  lint.mjs  validate-course-content.mjs  validate-course.mjs
web/src/app/: layout.tsx  page.tsx
web/src/builders/: course-detail-page-builder.mjs  course-home-page-builder.mjs  lesson-detail-page-builder.mjs
web/src/components/: app-shell.mjs  course-detail.mjs  course-list.mjs  course-sidebar.mjs  header.mjs  hero.mjs  (+1 more)
(+127 files in other folders)
