[project]
name = "learn-quant-with-codex"
version = "0.1.0"
description = "Educational Python quant modules for learn-quant-with-codex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.2.3",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_learning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
